@@ -204,6 +204,54 @@
         </widget>
        </item>
        <item row="1" column="0">
+        <widget class="QLabel" name="KnobDialModeTextLabel">
+         <property name="text">
+          <string>&amp;Knob dial mode:</string>
+         </property>
+         <property name="buddy">
+          <cstring>KnobDialModeComboBox</cstring>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QComboBox" name="KnobDialModeComboBox">
+         <property name="toolTip">
+          <string>Knob dial mode</string>
+         </property>
+         <property name="editable">
+          <bool>false</bool>
+         </property>
+         <item>
+          <property name="text">
+           <string>(default)</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Linear</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Angular</string>
+          </property>
+         </item>
+        </widget>
+       </item>
+       <item row="1" column="2" colspan="2">
+        <spacer>
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint">
+          <size>
+           <width>20</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+	   <item row="2" column="0">
         <widget class="QLabel" name="CustomStyleThemeTextLabel">
          <property name="text">
           <string>Custom &amp;style theme:</string>
@@ -213,7 +261,7 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="1">
+       <item row="2" column="1">
         <widget class="QComboBox" name="CustomStyleThemeComboBox">
          <property name="toolTip">
           <string>Custom widget style theme</string>
@@ -228,20 +276,7 @@
          </item>
         </widget>
        </item>
-       <item row="1" column="2">
-        <spacer>
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeHint">
-          <size>
-           <width>20</width>
-           <height>20</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item row="2" colspan="3">
+       <item row="3" colspan="3">
         <spacer>
          <property name="orientation">
           <enum>Qt::Vertical</enum>
@@ -282,6 +317,7 @@
   <tabstop>ProgramsDeleteToolButton</tabstop>
   <tabstop>ProgramsTreeWidget</tabstop>
   <tabstop>UseNativeDialogsCheckBox</tabstop>
+  <tabstop>KnobDialModeComboBox</tabstop>
   <tabstop>CustomStyleThemeComboBox</tabstop>
   <tabstop>DialogButtonBox</tabstop>
  </tabstops>
